
syntax = "proto3";

option go_package = "google.golang.org/grpc/examples/helloworld/helloworld";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package helloworld;

service DogService {
  // Sends a greeting
  rpc GetDog (GetDogRequest) returns (GetDogResponse) {}
}

message GetDogRequest{
}

message GetDogResponse{
  string name = 1;
  int32 age = 2;
  int32 weight = 3;
}